package compiladores2021.tabla;

public class Variable extends Id{
    
}
